src/testsuite/single/tests/compiler/fail/static_local.c
void main() {
    static int x = 5;
}
